--- a/Moduuli1/tehtävä3/tehtava3.html
+++ b/Moduuli1/tehtävä3/tehtava3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript testing</title>
-    <script src="example.js" defer></script>
+    <script src="tehtava3.js" defer></script>
 </head>
 <body>
     <h1>Hello World!</h1>
