--- a/Moduuli1/tehtävä1/tehtava1.html
+++ b/Moduuli1/tehtävä1/tehtava1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript testing</title>
-    <script src="example.js" defer></script>
+    <script src="tehtava1.js" defer></script>
 </head>
 <body>
     <h1>Example</h1>
