--- a/Moduuli1/tehtävä2/tehtava2.html
+++ b/Moduuli1/tehtävä2/tehtava2.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript testing</title>
-    <script src="example.js" defer></script>
+    <script src="tehtava2.js" defer></script>
 </head>
 <body>
-    <h1 id="target"></h1>
+    <h1>Hello World!</h1>
+    <p id="target"></p>
 
 </body>
 </html>
