--- a/Moduuli1/tehtävä4/tehtava4.html
+++ b/Moduuli1/tehtävä4/tehtava4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript testing</title>
-    <script src="example.js" defer></script>
+    <script src="tehtava4.js" defer></script>
 </head>
 <body>
     <h1 id="target"></h1>
