--- a/Moduuli1/tehtävä5/tehtava5.html
+++ b/Moduuli1/tehtävä5/tehtava5.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript testing</title>
-    <script src="example.js" defer></script>
+    <script src="tehtava5.js" defer></script>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p id="target"></p>
+    <h1 id="target"></h1>
 
 </body>
 </html>
