--- a/Moduuli2 /tehtävä1/tehtava1.html
+++ b/Moduuli2 /tehtävä1/tehtava1.html
@@ -5,8 +5,7 @@
     <title>JavaScript testing</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <p id="target"></p>
-    <script src="tehtava3.js" defer></script>
+    <h1 id="target"></h1>
+    <script src="tehtava1.js" defer></script>
 </body>
 </html>
