--- a/Moduuli2 /task10/task10.html
+++ b/Moduuli2 /task10/task10.html
@@ -5,7 +5,7 @@
     <title>JavaScript testing</title>
 </head>
 <body>
-    <h1 id="target"></h1>
-    <script src="tehtava1.js" defer></script>
+
+    <script src="task10.js" defer></script>
 </body>
 </html>
