--- a/Moduuli2 /task2/task2.html
+++ b/Moduuli2 /task2/task2.html
@@ -5,7 +5,10 @@
     <title>JavaScript testing</title>
 </head>
 <body>
-    <h1 id="target"></h1>
-    <script src="tehtava1.js" defer></script>
+    <ol id="target">
+
+    </ol>
+
+    <script src="task2.js" defer></script>
 </body>
 </html>
